@@ -1,3 +1,6 @@
+Upcoming:
+- Fixed crashes with the Builder in combination with liquids
+
 1.16-3.0.10:
 - Fixed the shield. All render modes were broken
 
